# streamlit_chromadb_connection

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  PyPI.yml  TestPyPI.yml
src/streamlit_chromadb_connection/: chromadb_connection.py
src/streamlit_chromadb_connection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/unit_tests/: collection_test.py  connect_test.py
